fix overflow

--- a/src/components/Registry/Registry.module.scss
+++ b/src/components/Registry/Registry.module.scss
@@ -1,13 +1,15 @@
 .container {
   width: 100%;
-  height: 100vh;
   position: absolute;
+  height: 100vh;
   z-index: 200;
   top: 0;
   left: 0;
+  overflow: auto;
   background: #303030;
   transition: all 0.5s ease-in-out;
   transform: translateY(0);
+  padding-bottom: 50px;
 
   .head {
     color: white;
